@@ -1,3 +1,8 @@
+2006-02-18  Alp Toker  <alp@atoker.com>
+
+	* UnixEndPoint.cs: Avoid truncation of last two bytes of SocketAddress
+	string
+
 2006-01-26  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UnixMarshal.cs: Check for null arguments in PtrToString() and
